--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -518,23 +518,21 @@ img {
    // .main-block__buutons
 
    &__buttons {
-      @media (min-width: $md3+px) {
       display: grid;
       grid-template-columns: 200px 200px;
       justify-content: center;
       gap: 40px;
-      }
+      @media (max-width: $md3+px) {
+         grid-template-columns: 1fr;
+         gap: 20px;
+         }
       @include adaptive-value("margin-bottom", 82, 30, 1);
    }
 
    // .main-block__button
 
    &__button {
-        @media (max-width: $md3+px) {
-           &:not(:last-child) {
-              margin-bottom: 20px;
-           }
-        }
+   z-index: 55;
    }
 
    // .main-block__arrow
@@ -599,6 +597,7 @@ img {
    // .social__item
 
    &__item {
+      z-index: 55;
       @media (min-width: 675px) {
       display: grid;
       width: 60px;
@@ -1205,7 +1204,6 @@ img {
 		left: 0;
    }
 }
-
 
 
 
