--- a/#src/scss/select.scss
+++ b/#src/scss/select.scss
@@ -60,6 +60,8 @@
 
 .select__option {
   padding: 0.375rem 5px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .select__option_selected {
